src/test/deca/context/invalid/created/binary_exp/op_comp/neq_null_float.deca
// Description :
//    test neq entre un null et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type null, float, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{

float b;
boolean c = null != b;
}
